# mecab-wrapper.rs

./: Cargo.toml  README.md  build.rs
lib/: cmecab.cpp
src/: feat.rs  ffi.rs  lib.rs  node_iter.rs
src/ffi/: dictionary_info.rs  lattice.rs  model.rs  model_args.rs  node.rs  request_type.rs  tagger.rs
