[package]
name = "mecab-wrapper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["cmecab"]
cmecab = ["libc"]

[dependencies]
libc = { version = "0.2", optional = true }
csv = { version = "1.2" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = { version = "0.3" }

[build-dependencies]
cc = { version = "1.0" }
